--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "upload_iasd",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "author": "Gabriel Kramer",
   "description": "Aplicação para upload de arquivos na rede local para igrejas IASD",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "node --watch server.js",
     "start:zap": "node src/controllers/whatsappController.js",
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.15.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "uuid": "^10.0.0",
-    "whatsapp-web.js": "^1.25.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
+    "whatsapp-web.js": "^1.25.0",
+    "youtube-dl-exec": "^3.0.10"
   }
+
 }
