--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Rust/Cargo build artifacts
+src-tauri/target/
+src-tauri/Cargo.lock
+
+# WhatsApp Bot cache
+.wwebjs_cache/
+.wwebjs_auth/
+*.wwebjs_cache
+*.wwebjs_auth
