Adiciona README completo com documentação visual e instruções de instalação

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ src-tauri/Cargo.lock
 .wwebjs_auth/
 *.wwebjs_cache
 *.wwebjs_auth
+
+# Release files (não commitar executáveis)
+release-files/
+*.exe
+*.msi
