--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uploadiasddesktop"
-version = "0.1.0"
+version = "2.1.0"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -26,8 +26,11 @@ serde_json = "1"
 tauri-plugin-store = "2.4.1"
 which = "6.0"
 dirs = "5.0"
-reqwest = { version = "0.12", features = ["blocking"] }
+reqwest = { version = "0.12", features = ["blocking", "json"] }
 tokio = { version = "1", features = ["full"] }
+semver = "1.0"
+uuid = { version = "1.0", features = ["v4"] }
+chrono = { version = "0.4", features = ["serde"] }
 axum = { version = "0.7", features = ["multipart"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["fs", "cors"] }
