--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "build-and-release": "node build-and-release.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
